Fix buttons overflow on mobile

--- a/version_control/Codurance_September2020/css/modules/button.css
+++ b/version_control/Codurance_September2020/css/modules/button.css
@@ -8,5 +8,6 @@
   .custom-btn .button-primary {
     width: 100%;
     max-width: var(--button-max-width);
+    box-sizing: border-box !important;
   }
 {% endcall %}
